Refactor Dockerfile for multi-stage build process; switch to Node 18 for building React app, serve with Nginx, and add health check. Update exposed port to 80 and include image management labels.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host 0.0.0.0 --port 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0 --port 3000"
   },
   "dependencies": {
     "@types/dagre": "^0.7.53",
